--- a/src/scss/layout/_fill.scss
+++ b/src/scss/layout/_fill.scss
@@ -3,25 +3,27 @@
     display: flex;
     flex-direction: column;
     border-bottom: 1px solid $whiteThree;
-     margin: 20px;  
+     //margin: 20px;  
 }
 
-.formHidden {
-    display: none;
-}
+// .formHidden {
+//     display: none;
+// }
 //para que no se vea la section tengo que añadir esta clase y quitarle la que tiene, o cambiar una por otra//
 
 .formContainer {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(8,40px);
-    gap: 45px;
+    display: flex;
+    flex-direction: column;
+    // display: grid;
+    // grid-template-columns: 1fr 1fr;
+    // grid-template-rows: repeat(8,40px);
+    gap: 20px;
     margin: 30px 20px;
        
     &__name, &__job, &__email, &__phone, &__linkedin, &__github {
         display: flex;
         flex-direction: column;
-        grid-column: 1/3;
+       // grid-column: 1/3;
         font-size: 1.4rem;
         font-family: $fontOpenSans;
         line-height: 1.43;
@@ -42,34 +44,37 @@
     }
     &__image {
             display: flex;
-            flex-direction: column;
-            grid-column: 1/2;
+            flex-direction: row;
+            justify-content: space-between;
+           // grid-column: 1/2;
             font-size: 1.4rem;
             font-family: $fontOpenSans;
-            line-height: 1.43;
+           // line-height: 1.43;
         &--title {
             color: $darkGreenBlue;
-            margin-bottom: 7px;
+            font-size: 1.4rem;
+            font-family: $fontOpenSans;
         }
         &--add {
             color: $whiteTwo;
             background-color: $dullOrange;
             width: 140px;
-            height: 40px;
-            padding-top: 3px;
-            padding-bottom: 7px;
+           // height: 40px;
+            //padding-top: 3px;
+            //padding-bottom: 7px;
+            padding: 5px;
             text-align: center;
         }
     }
 
     &__square {
-            grid-column: 2/3;
-            grid-row: 3/4;
+           // grid-column: 2/3;
+           // grid-row: 3/4;
             width: 30px;
             height: 30px;
             border: solid 1px $hospitalGreen;
             align-self: flex-end;
-            transform: translateY(60%);
+            //transform: translateY(60%);
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
